language/tools/move-unit-test/tests/test_sources/native_abort.exp
Running Move unit tests
[ PASS    ] 0x1::A::native_abort_good_right_code
[ FAIL    ] 0x1::A::native_abort_good_wrong_code
[ FAIL    ] 0x1::A::native_abort_unexpected_abort

Test failures:

Failures in 0x1::A:

┌── native_abort_good_wrong_code ──────
│ error[E11001]: test failure
│    ┌─ native_abort.move:12:9
│    │
│ 11 │     fun native_abort_good_wrong_code() {
│    │         ---------------------------- In this function in 0x1::A
│ 12 │         Vector::borrow(&Vector::empty<u64>(), 1);
│    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test did not abort with expected code. Expected test to abort with 0 but instead it aborted with 1 here
│ 
│ 
└──────────────────


┌── native_abort_unexpected_abort ──────
│ error[E11001]: test failure
│   ┌─ native_abort.move:6:9
│   │
│ 5 │     fun native_abort_unexpected_abort() {
│   │         ----------------------------- In this function in 0x1::A
│ 6 │         Vector::borrow(&Vector::empty<u64>(), 1);
│   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Test was not expected to abort but it aborted with 1 here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 3; passed: 1; failed: 2
